--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-hot-toast": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -46,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-helmet": "^6.1.1",
     "@types/react-router-dom": "^5.1.7"
   }
 }
